# shopping

./: README.md  pyproject.toml  shopping.py
